[tool.poetry]
name = "rosatasks"
version = "0.1.0"
description = ""
authors = ["Wojciech Gruszka <wojciech@gruszka.eu>"]

[tool.poetry.dependencies]
python = "^3.8"
celery = "^4.4.5"
numpy = "^1.19.0"
qiskit = "^0.19.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
