[tool.poetry]
name = "rosatasks"
version = "0.3.0"
description = ""
authors = ["Wojciech Gruszka <wojciech@gruszka.eu>"]

[tool.poetry.dependencies]
python = "^3.7"
celery = "^4.4.5"
numpy = "^1.19.0"
qiskit = "^0.19.5"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
